<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <!-- Nombre -->
    <TextView
        android:id="@+id/cvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cvName"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Slider de imágenes -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvImageCardView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvName">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/cvImgSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorEnabled="true"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="4dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderIndicatorSelectedColor="@color/colorPhoneNavBar"
            app:sliderIndicatorUnselectedColor="@color/colorWhite"
            app:sliderScrollTimeInSec="1" />

    </androidx.cardview.widget.CardView>

    <!-- Scroll view con el resto de datos -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvImageCardView">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorItemBackground"
            app:cardCornerRadius="12dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <!-- Datos generales -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_data"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="2dp">

                    <!-- Dirección -->
                    <TextView
                        android:id="@+id/cvDireccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:textSize="13sp"
                        android:paddingBottom="4dp"
                        app:drawableLeftCompat="@drawable/ic_location" />

                    <!-- Concejo + Localidad + Código Postal -->
                    <TextView
                        android:id="@+id/cvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:drawablePadding="8dp"
                        android:textSize="13sp"
                        android:paddingBottom="4dp"
                        app:drawableLeftCompat="@drawable/ic_direction" />

                    <!-- Teléfono -->
                    <TextView
                        android:id="@+id/cvTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:drawablePadding="8dp"
                        android:textSize="13sp"
                        android:paddingBottom="4dp"
                        app:drawableLeftCompat="@drawable/ic_phone" />
                </LinearLayout>

                <!-- Descripción -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:paddingTop="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/cvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:textSize="13sp"
                    android:textColor="@color/colorTextSecondary"
                    android:textAlignment="gravity"
                    android:justificationMode="inter_word"
                    android:paddingBottom="8dp"
                    android:layout_marginStart="2dp" />

                <TextView
                    android:id="@+id/tvVerMas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_more"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/see_more_background"
                    android:textSize="11sp"
                    android:layout_gravity="end"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Observaciones -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remarks"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingTop="16dp"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/cvObservaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:paddingBottom="16dp"
                    android:justificationMode="inter_word"
                    android:layout_marginStart="2dp" />

                <!-- Redes sociales -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/cvFacebook"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_facebook"
                        android:contentDescription="@string/facebook"/>

                    <ImageView
                        android:id="@+id/cvTwitter"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_twitter"
                        android:contentDescription="@string/twitter"/>

                    <ImageView
                        android:id="@+id/cvInstagram"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_instagram"
                        android:contentDescription="@string/instagram"/>

                    <ImageView
                        android:id="@+id/cvYoutube"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_youtube"
                        android:contentDescription="@string/youtube"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
